# SFPlayer

./: .gitmodules  CMakeLists.txt  README.md
examples/desktop/: desktop.cpp  main.cpp
examples/ios/: AppDelegate.h  ViewController.h  ViewController.mm
examples/windows/: main.cpp
include/: player_element_interface.h  sfplayer.h
include/render/: render_interface.h
src/: ffmpeg_impl.cpp  ffmpeg_impl.h  media_frame.h  media_struct.h  player_element_interface.h  sfplayer-prefix.cpp  sfplayer-prefix.h  sfplayer.cpp
src/components/: player_event.cpp  player_event.h  player_status_machine.cpp  player_status_machine.h  ring_buffer.h
src/decoder/: decoder_interface.h  ffmpeg_decoder.cpp  ffmpeg_decoder.h
src/demuxer/: ffmpeg_demuxer.cpp  ffmpeg_demuxer.h
src/parameter/: parameter.h
src/render/: apple_render.h  apple_render.mm  render.cpp  render.h  render_interface.h  sdl_render.cpp  sdl_render.h
